<resources>
    <string name="app_name">Recipes App</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_ingridient">Add Ingridient</string>
    <string name="add_instruction">Add Instruction</string>
    <string name="enter_instruction">Enter Instruction</string>
    <string name="enter_ingridient">Enter Ingridient</string>
    <string name="preference_favorites_file">FavoritesList"</string>
    <string name="preference_favorites_key">favorite</string>
    <string name="description">description</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="favorites_msg">Show only favorites recipes</string>
    <string name="added_msg">Show only my recipes</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="preferences_file">com.example.recipebook_preferences</string>
    <string name="favorites">favorites</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="add_image">Add Image</string>
    <string name="uploaded_image">UploadedImage</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="Use_without_an_account">Use without an account</string>
    <string name="logout">Log-out</string>
    <string name="removed_from_favorites">Recipe removed from favorites</string>
    <string name="added_to_favorites">Recipe added to favorites</string>
    <string name="delete_dialog_title">Delete confirmation</string>
    <string name="delete_dialog_msg">Ary you sure you want to delete this recipe?</string>
    <string name="delete_dialog_btn">Delete</string>
    <string name="save_dialog_title">Almost done!</string>
    <string name="save_dialog_msg">Have your forgot to add something? press Cancel Otherwise press Submit</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="recipe_submitted">Recipe submitted!</string>
    <string name="select_image">Select Image from here...</string>
    <string name="added">added</string>
    <string name="notification_upload_ok_">Image uploaded successfully</string>
    <string name="notification_upload_fail">Image upload failed</string>

</resources>