<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Support.CoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.RecipeDetailsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_tool_bar_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/iv_image_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@tools:sample/backgrounds/scenic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:focusable="true"
                app:cardElevation="1dp">

                <TextView
                    android:id="@+id/tv_name_details"
                    style="@style/DetailsTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    tools:text="@string/recipe_name" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:focusable="true"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_description_header_details"
                        style="@style/DetailsSubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:drawableStart="@drawable/ic_baseline_info_24"
                        android:drawablePadding="16dp"
                        android:gravity="center"
                        android:text="@string/description" />

                    <TextView
                        android:id="@+id/tv_description_content_details"
                        style="@style/DetailsContentStyleLessSignificant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_ingredients_header_details"
                        style="@style/DetailsSubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="16dp"
                        android:drawableStart="@drawable/ic_baseline_shopping_cart_24"
                        android:drawablePadding="16dp"
                        android:gravity="center"
                        android:text="@string/ingredients" />

                    <LinearLayout
                        android:id="@+id/list_view_ingredients_details"
                        style="@style/DetailsContentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_instructions_header_details"
                        style="@style/DetailsSubTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="16dp"
                        android:drawableStart="@drawable/ic_baseline_format_list_numbered_24"
                        android:drawablePadding="16dp"
                        android:gravity="center"
                        android:text="@string/instructions" />

                    <LinearLayout
                        android:id="@+id/list_view_instructions_details"
                        style="@style/DetailsContentStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/typeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undefined_icon"
        android:tint="@color/cardview_light_background"
        app:layout_anchor="@id/app_bar_details"
        app:layout_anchorGravity="bottom|center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_anchor="@id/nested_scroll_view"
        app:layout_anchorGravity="end|bottom">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_button_details"
            style="@style/FloatingActionButtonStyle"
            app:backgroundTint="@color/black"
            app:elevation="0dp"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_button_details"
            style="@style/FloatingActionButtonStyle"
            app:backgroundTint="@color/black"
            app:elevation="0dp"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/ic_baseline_edit_24" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_button_details"
            style="@style/FloatingActionButtonStyle"
            app:backgroundTint="@color/black"
            app:elevation="0dp"
            app:maxImageSize="40dp"
            app:srcCompat="@drawable/ic_baseline_delete_24" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>